# compare_MD

./: .cproject  .project  CMakeLists.txt  README.md
src/: CPU.cpp  CPU.h  CUDA.cu  CUDA.h  CUDA_device_utils.cu  CUDA_device_utils.h  CUDA_kernels.cuh  defs.h  interaction.cpp  interaction.h  main.c  main.cpp  utils.cpp  utils.h
